--- a/Stage 2/accueil/acceuil.css
+++ b/Stage 2/accueil/acceuil.css
@@ -8,48 +8,134 @@
 
 
 /*-------------------------Header------------------------*/
-.navbar {
-	background: #E74513
+/* default css start */
+  nav {
+	position: fixed;
+	z-index: 10;
+	left: 0;
+	right: 0;
+	top: 0;
+	font-family: 'Montserrat', sans-serif;
+	padding: 0 5%;
+	height: 75px;
+	background-color: #E74513;
 }
-
-.nav-item::after {
-	content: '';
+nav .logo {
+	float: left;
+	width: 40%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	font-size: 24px; 
+  font-weight: bold;
+	color: #333;
+}
+nav .links {
+	float: right;
+	padding: 0;
+	margin: 0;
+	width: 60%;
+	height: 100%;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+nav .links li {
+	list-style: none;
+}
+nav .links a {
 	display: block;
-	width: 0px;
-	height: 2px;
-	background: #000;
-	transition: 0.4s
+	padding: 2px;
+	font-size: 16px;
+	font-weight: bold;
+	color: #333;
+	text-decoration: none;
+	background: linear-gradient(to top, rgba(0, 0, 0, 255) 0%, rgba(0, 0, 0, 255) 2px, transparent 3px) no-repeat;
+	background-size: 0 100%;
+	transition: background-size .3s;
 }
 
-.nav-item:hover::after {
-	width: 50px;
+nav .links a:hover{
+	background-size: 100% 100%;
 }
 
-.navbar-dark .navbar-nav .active>.nav-link,
-.navbar-dark .navbar-nav .nav-link.active,
-.navbar-dark .navbar-nav .nav-link.show,
-.navbar-dark .navbar-nav .show>.nav-link,
-.navbar-dark .navbar-nav .nav-link:focus,
-.navbar-dark .navbar-nav .nav-link:hover {
-	color: #000
+#nav-toggle {
+	position: absolute;
+	top: -100px;
 }
-
-.nav-link {
-	padding: 5px 5px;
-	transition: 0.2s
+nav .icon-burger {
+	display: none;
+	position: absolute;
+	right: 5%;
+	top: 50%;
+	transform: translateY(-50%);
 }
-
-
+nav .icon-burger .line {
+	width: 30px;
+	height: 5px;
+	background-color: #333;
+	margin: 5px;
+	border-radius: 3px;
+	transition: all 0.5s ease-in-out;
+}
+@media screen and (max-width: 768px) {
+	nav .logo {
+		float: none;
+		width: auto;
+		justify-content: center;
+	}
+	nav .links {
+		float: none;
+		position: fixed;
+		z-index: 9;
+		left: 0;
+		right: 0;
+		top: 75px;
+		bottom: 100%;
+		width: auto;
+		height: auto; 
+    
+		flex-direction: column;
+		justify-content: space-evenly;
+		background-color: rgba(255,127,80,.8);
+		overflow: hidden;
+		box-sizing: border-box;
+		transition: all 1.5s ease-in-out;
+	}
+	nav .links a {
+		font-size: 20px; 
+    color: white;
+	}
+	nav :checked ~ .links {
+		bottom: 0;
+	}
+	nav .icon-burger {
+		display: block;
+	}
+	nav :checked ~ .icon-burger .line:nth-child(1) {
+		transform: translateY(10px) rotate(225deg);
+	}
+	nav :checked ~ .icon-burger .line:nth-child(3) {
+		transform: translateY(-10px) rotate(-225deg);
+	}
+	nav :checked ~ .icon-burger .line:nth-child(2) {
+		opacity: 0;
+	}
+	
+}
 
 /*-----------------Main------------------------------*/
+
 .container-fluid{
 	padding-bottom: 10px;
+	width: 100%;
 }
 
 .titre{
 	text-align: center;
 	color: #E74513;
 	font-weight: bold;
+	margin-top: 100px;
 }
 
 .pres{
